# HackHive

./: ACTION_PLAN.md  CONTRIBUTING.md  LICENSE  README.md
services/admin/: TODO.md
services/challenges/: Cargo.toml  Dockerfile  todo
services/fileshare/: Dockerfile  pyproject.toml
services/leaderboard/: go.mod  main.go
services/users/: Dockerfile  drizzle-dev.config.ts  drizzle-prod.config.ts  go.mod  go.sum  main.go  main_test.go  package.json  pnpm-lock.yaml  todo  tools.go  tsconfig.json
services/users/config/: config.go
services/users/database/: db.go
services/users/handlers/: handlers.go  handlers_test.go  teams.go  teams_test.go  users.go  users_test.go
services/users/models/: model_test.go  models.go
services/users/routers/: router.go  routers.go  routers_test.go  team.go  teams.go  user.go  users.go
services/users/src/: app.ts
services/users/src/db/: db.ts
services/users/src/handler/: teams.ts  users.ts
services/users/src/routes/: index.ts  teams.ts  users.ts
services/users/src/schema/: index.ts  teams.ts  users.ts
services/users/testutils/: utils.go
services/users/utils/database/: db.go
services/users/utils/loggers/: loggers.go
services/users/utils/middlewares/: auth.go  middleware_test.go  team.go
services/users/utils/tests/: utils.go
