[tool.poetry]
name = "fileshare"
version = "1.0.0"
description = "A fileshare python http server for CTFd"
authors = ["parrothacker1 <rajeevgoutham1@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
